﻿Revision history for {{$dist->name}}

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 2.022000, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: ↑30 (recommends: ↑1, suggests: ↑1)
 - runtime: ↑38
 - test: +1 ↑5 (recommends: ↑3)

2.022000 2014-10-25T09:54:57Z 784f4f1
 [00 Minor]
 - Replace EOLTests with Test::EOL

 [Dependencies::Stats]
 - Dependencies changed since 2.021000, see misc/*.deps* for details
 - configure: (recommends: ↑1)
 - develop: +3 ↑26 -1 (recommends: +1, suggests: ↑1)
 - runtime: +1 ↑29 -1
 - test: ↑2 (recommends: ↑2)

 [Utils]
 - use canonicalised Sereal keys

2.021000 2014-10-05T11:28:53Z 7814800
 [00 Minor]
 - Inject Prereqs::AuthorDeps to auto discover develop deps.
 - Add shortend SHA1 to changes headers.

 [Dependencies::Stats]
 - Dependencies changed since 2.020005, see misc/*.deps* for details
 - develop: ↑1
 - runtime: +1 ↑1

2.020005 2014-10-03T07:04:22Z
 [Bugfix]
 - dep_changes.pl: Use a flattened key value because the previous release started segv-ing and eating all my ram
   shortly after release.

 [Utils]
 - dep_changes.pl: Shard out LMDB namespaces to distinct DBs till I can work out a better way to see wtf is going on
   inside them.

2.020004 2014-10-03T06:41:47Z
 [Dependencies::Stats]
 - Dependencies changed since 2.020003, see misc/*.deps* for details
 - develop: ↑4
 - runtime: ↑8 (recommends: +2 -2)
 - test: ↑1 (recommends: ↑1)

 [Utils]
 - dep_changes.pl : Use LMDB driver by default
 - dep_changes.pl : Add several more levels of advanced caching for blazing fast performance.

2.020003 2014-09-23T14:54:27Z
 [Dependencies::Stats]
 - Dependencies changed since 2.020002, see misc/*.deps* for details
 - develop: ↑1
 - runtime: ↑1

 [Minting]
 - Minted dist.ini's don't default to wrong twitter hash tag syntax.

2.020002 2014-09-20T21:00:28Z
 [Dependencies::Stats]
 - Dependencies changed since 2.020001, see misc/*.deps* for details
 - develop: ↑8
 - runtime: ↑12
 - test: ↑2

 [Utils]