@@ -82,7 +82,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.022000
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.022001
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -100,7 +100,10 @@ default_jobs = 10
 [Author::KENTNL::RecommendFixes / @Author::KENTNL/Author::KENTNL::RecommendFixes]
 :version = 0.001001
 
-[ReadmeFromPod / @Author::KENTNL/ReadmeFromPod]
+[ReadmeAnyFromPod / @Author::KENTNL/ShippedReadme]
+filename = README
+location = build
+type = text
 
 [ReadmeAnyFromPod / @Author::KENTNL/ReadmeAnyFromPod]
 filename = README.mkdn
@@ -193,7 +196,6 @@ Dist::Zilla::Plugin::Prereqs = 0
 Dist::Zilla::Plugin::Prereqs::AuthorDeps = 0
 Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
-Dist::Zilla::Plugin::ReadmeFromPod = 0
 Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
