@@ -39,7 +39,6 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - Dist::Zilla::Plugin::PodSyntaxTests 5.021 → 5.027
  - Dist::Zilla::Plugin::Prereqs 5.021 → 5.027
  - Dist::Zilla::Plugin::Prereqs::AuthorDeps 0.003 → 0.004
- - Dist::Zilla::Plugin::ReadmeFromPod 0.21 → 0.30
  - Dist::Zilla::Plugin::RunExtraTests 0.022 → 0.025
  - Dist::Zilla::Plugin::Test::EOL 0.14 → 0.16
  - Dist::Zilla::Plugin::TestRelease 5.021 → 5.027
@@ -74,7 +73,6 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - Dist::Zilla::Plugin::PodSyntaxTests 5.021 → 5.027
  - Dist::Zilla::Plugin::Prereqs 5.021 → 5.027
  - Dist::Zilla::Plugin::Prereqs::AuthorDeps 0.003 → 0.004
- - Dist::Zilla::Plugin::ReadmeFromPod 0.21 → 0.30
  - Dist::Zilla::Plugin::RunExtraTests 0.022 → 0.025
  - Dist::Zilla::Plugin::Test::EOL 0.14 → 0.16
  - Dist::Zilla::Plugin::TestRelease 5.021 → 5.027
@@ -99,6 +97,12 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  - Path::Tiny 0.059 → 0.061
  - Test::DZil 5.021 → 5.027
  - Test::Fatal 0.013 → 0.014
+
+ [Removed / develop requires]
+ - Dist::Zilla::Plugin::ReadmeFromPod 0.21
+
+ [Removed / runtime requires]
+ - Dist::Zilla::Plugin::ReadmeFromPod 0.21
 
 2.022000 2014-10-25T09:54:57Z
  [Added / develop recommends]
